--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "clsx": "^2.1.1",
     "lowlight": "^3.3.0",
     "nanoid": "^5.1.5",
-    "next": "14.3.1",
+     "next": "^14.2.29",
     "next-auth": "^4.24.11",
     "pdf-lib": "^1.17.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
     "uuid": "^11.1.0"
   },
