--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tiptap/react": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
     "clsx": "^2.1.1",
+    "html-to-image": "^1.11.13",
     "lowlight": "^3.3.0",
     "nanoid": "^5.1.5",
     "next": "^14.2.29",
