--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@tiptap/starter-kit": "^2.12.0",
     "clsx": "^2.1.1",
     "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.2",
     "lowlight": "^3.3.0",
     "nanoid": "^5.1.5",
     "next": "^14.2.29",
