--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "jspdf": "^3.0.2",
     "lowlight": "^3.3.0",
     "nanoid": "^5.1.5",
-    "next": "^14.2.29",
+    "next": "^14.2.32",
     "next-auth": "^4.24.11",
     "pdf-lib": "^1.17.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
     "uuid": "^11.1.0"
   },
@@ -51,15 +51,16 @@
     "@tailwindcss/cli": "^4.1.5",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5.9.2"
   }
 }
